--- a/Root/home.html
+++ b/Root/home.html
@@ -139,7 +139,7 @@
                             <a class="nav-link fw-medium" aria-current="page" href="#">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link fw-medium" aria-current="page" href="#">Our Product</a>
+                            <a class="nav-link fw-medium" aria-current="page" href="./product.html">Our Product</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link fw-medium" aria-current="page" href="#locations">Location</a>
